--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 aioredis==2.0.1
 async-timeout==4.0.2
+attrs==22.2.0
 black==23.1.0
 click==8.1.3
+exceptiongroup==1.1.1
+iniconfig==2.0.0
 mypy-extensions==1.0.0
 packaging==23.0
 pathspec==0.11.1
 platformdirs==3.1.1
+pluggy==1.0.0
+pytest==7.2.2
+pytest-asyncio==0.21.0
 python-environ==0.4.54
 tomli==2.0.1
 typing_extensions==4.5.0
